<resources>
    <string name="app_name">GiziPlan</string>
    <string name="btn_measure">Isi Data Bayi</string>
    <string name="btn_show_menu">Lihat Menu</string>
    <string name="btn_show_measure_results">Lihat Hasil Perhitungan</string>
    <string name="text_menu">Daftar Menu</string>
    <string name="text_measure">Data Bayi</string>
    <string name="text_measure_results">Hasil Perhitungan</string>
    <string name="text_loading">Sedang memproses</string>
    <string name="text_status_result">Status Gizi</string>
    <string name="description_menu_preview">Menu Preview</string>
    <string name="description_icon_height">Measure Icon</string>
    <string name="description_icon_weight">Weight Icon</string>
    <string name="description_icon_baby">Baby Icon</string>
    <string name="dummy_text_menu_title">Menu Title</string>
    <string name="dummy_text_menu_description">Menu Description</string>
    <string name="dummy_text_measure_result_title">Measure Result 1</string>
    <string name="dummy_text_measure_result_description">Description Measure Result 1</string>
    <string name="btn_submit">Kirim</string>
    <string name="hint_age">Umur (Bulan)</string>
    <string name="hint_gender">Jenis Kelamin</string>
    <string name="hint_weight">Berat Badan (Kg)</string>
    <string name="hint_height">Tinggi Badan (cm)</string>

    <string name="message_age_required">Umur tidak boleh kosong</string>
    <string name="message_min_age_required">Umur minimal 6 bulan</string>
    <string name="message_gender_required">Pilih jenis kelamin terlebih dahulu</string>
    <string name="message_weight_required">Berat badan tidak boleh kosong</string>
    <string name="message_min_weight_required">Berat badan minimal 1,9 kg</string>
    <string name="message_height_required">Tinggi badan tidak boleh kosong</string>
    <string name="message_min_height_required">Tinggi badan minimal 45 cm</string>
    <string name="text_status_by_pbu_label">PB/U</string>
    <string name="text_status_by_bbu_label">BB/U</string>
    <string name="text_status_by_bbpb_label">BB/PB</string>
    <string name="text_status_by_pbu_value">Tinggi</string>
    <string name="text_status_by_bbu_value">Berat Badan \nNormal</string>
    <string name="text_status_by_bbpb_value">Gizi\nBaik</string>
    <string name="text_recommendation_result">Menu Rekomendasi</string>
    <string name="failed_to_load_menu_message">Maaf! \nGagal memuat data menu</string>
    <string name="protein_label">Protein</string>
    <string name="energy_label">Energi</string>
    <string name="fat_label">Lemak</string>
    <string name="ingridients_label">Bahan-bahan</string>
    <string name="instructions_label">Cara Memasak</string>

    <string-array name="gender">
        <item>--Jenis Kelamin--</item>
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

    <string name="energy_template">%s kkal</string>
    <string name="protein_template">%s gr</string>
    <string name="fat_template">%s gr</string>
    <string name="measure_result_title_template">Hasil Perhitungan %d</string>
    <string name="measure_result_description_template">Dihitung pada: %s</string>

    <string name="preparing_result_label">Mempersiapkan hasil</string>
    <string name="dummy_text_menu_notes">Untuk memenuhi kebutuhan dalam sehari perlu ditambahkan 1-2 kali selingan</string>
    <string name="empty_measure_results_message">Belum ada data bayi yang dihitung</string>
</resources>